# aredes-roteirizacao-numerario

./: .gitignore  README.md  pyproject.toml
apps/: __init__.py
apps/ui_streamlit/: __init__.py  app.py  bootstrap.py  settings.toml
data/fake_smoke/: README.md  bases.json  contexto.json  ordens.json  pontos.json  viaturas.json
data/fake_solution/: README.md  bases.json  contexto.json  ordens.json  pontos.json  viaturas.json
data/logistics_snapshots/: README.md
data/logistics_sources/: README.md
data/scenarios/: catalog_v1.json
docs/: api.md  contexto.md  formulacao-matematica.md
docs/apresentacao/: 01-introducao-e-contexto.md  02-elementos-da-rede-grafica.md  03-modelagem-e-funcao-objetivo.md  04-tecnologia-solucao.md  05-resultados-e-analise.md
docs/benchmark/: README.md  protocolo-experimental.md
docs/contratos-e-arquitetura/: README.md  decisoes-arquiteturais.md  enums-e-vocabularios.md  erros-e-auditoria.md  especificacao-contratos.md  glossario.md  invariantes.md  matriz-rastreabilidade.md  plano-testes-contrato.md  serializacao-e-versionamento.md
docs/etapa-1/: README.md  decisoes-arquiteturais.md  enums-e-vocabularios.md  erros-e-auditoria.md  glossario.md  (+5 more)
notebook/: README.md  benchmark_solver_comparison.ipynb  benchmark_workbench_support.py  modelo_solver_workbench.ipynb  solver_workbench_support.py
scripts/: build_fake_smoke_matrix.py  generate_benchmark_catalog.py  generate_presentation_assets.py  materialize_benchmark_scenarios.py  rebuild_notebooks.py  roteirizacao_cli.py  run_solver_benchmark.py
tmp_orch_fresh/: manifest.json
(+88 files in other folders)
