[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "roteirizacao-numerario"
version = "0.1.0"
description = "Nucleo de planejamento para roteirizacao de transporte de numerario"
readme = "README.md"
requires-python = ">=3.13,<3.14"
authors = [
  { name = "Projeto Roteirizacao Numerario" }
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
roteirizacao = "roteirizacao.cli:main"
