[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "roteirizacao-numerario"
version = "0.1.0"
description = "Nucleo de planejamento para roteirizacao de transporte de numerario"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi>=0.135,<1",
  "uvicorn>=0.42,<1",
]
authors = [
  { name = "Projeto Roteirizacao Numerario" }
]

[project.optional-dependencies]
benchmark = [
  "matplotlib>=3.10,<4",
  "pulp>=2.9,<3",
]
dev = [
  "httpx>=0.28,<1",
]
notebook = [
  "contextily>=1.6,<2",
  "ipykernel>=6,<7",
  "jupyterlab>=4,<5",
  "matplotlib>=3.10,<4",
  "networkx>=3.4,<4",
  "pyvrp==0.13.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
roteirizacao = "roteirizacao.cli:main"
roteirizacao-api = "roteirizacao.api.main:run"
